# Slam_Project

./: .gitmodules  README.md
ROS2_WS/: covariance_data.txt  covariance_data.xml  scan_data.txt  scan_data.xml
ROS2_WS/install/: local_setup.sh  setup.sh
ROS2_WS/install/dynamic_tf/lib/dynamic_tf/: tf_map_baselink
ROS2_WS/install/dynamic_tf/share/dynamic_tf/: package.dsv  package.ps1  package.sh  package.xml
ROS2_WS/install/my_exo/lib/my_exo/: first_node  input_node  second_node  (+2 more)
ROS2_WS/install/slam_toolbox/share/: rviz_plugins.xml  solver_plugins.xml
ROS2_WS/log/: latest_build
ROS2_WS/src/: robot.xacro
ROS2_WS/src/dynamic_tf/: package.xml  setup.py
ROS2_WS/src/dynamic_tf/dynamic_tf/: tf_map_baselink.py
ROS2_WS/src/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
ROS2_WS/src/lidar2_data.bag/: lidar2_data.bag_0.db3  metadata.yaml
ROS2_WS/src/lidar_data/: metadata.yaml
ROS2_WS/src/lidar_data.bag/: lidar_data.bag_0.db3  metadata.yaml
ROS2_WS/src/log/: latest_build
ROS2_WS/src/my_exo/: setup.cfg  setup.py
ROS2_WS/src/my_exo/install/: local_setup.sh  setup.bash  setup.sh
ROS2_WS/src/my_exo/log/: latest_build
ROS2_WS/src/my_exo/my_exo/: input_node.py  second_node.py  selector_node.py
ROS2_WS/src/my_robot_controller/: setup.py
ROS2_WS/src/my_robot_controller/my_robot_controller/: draw_circle.py  my_first_node.py
ROS2_WS/src/tf_transform/: tf2_transform.py
ROS2_WS/urdf/: lidar_robot.urdf  lidar_robot.xacro
extraction/: CMakeLists.txt  CUDA_OPTIMIZATION_EXPLANATION.md  CUDA_SETUP_GUIDE.md  CUDA_VISUAL_DIAGRAMS.md  INDEX_CUDA.md  INTEGRATION_CHECKLIST.md  INTEGRATION_SUMMARY.md  JETSON_NANO_GUIDE.md  JETSON_NANO_PRACTICAL.md  JETSON_NANO_UPDATE.md  README_CUDA.md  RECAP_FINAL.md  START_HERE.md  covariance_data.xml  main.cpp  scan_data.xml
extraction/include/: cuda_mapper_kernels.h
extraction/include/karto_sdk/: Karto.h  Mapper.h
extraction/src/: Fonction_Test.cpp  Karto.cpp  Mapper.cpp  cuda_mapper_kernels.cu  input_data.txt  output_data.txt
(+634 files in other folders)
